[gd_scene load_steps=2 format=3 uid="uid://duv3p0mcwkvq3"]

[ext_resource type="Script" path="res://Scripts/UI/multiplayer controller.gd" id="1_6ur1b"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ur1b")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_top = 25.0
offset_right = 44.0
offset_bottom = 56.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 63.0
offset_top = 25.0
offset_right = 107.0
offset_bottom = 56.0
text = "Join"

[node name="Start Game" type="Button" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 25.0
offset_right = 214.0
offset_bottom = 56.0
text = "Start game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 70.0
offset_right = 241.0
offset_bottom = 101.0
placeholder_text = "Enter Your Name!"

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Start Game" to="." method="_on_start_game_pressed"]
